Adjusted contact us page to fix width issues on small screens

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,7 +51,7 @@ a {
 }
 
 textarea#contact_us_contact_message{
-  width: 300px;
+  width: 80%;
   height: 120px;
 }
 
